--- a/index.css
+++ b/index.css
@@ -185,10 +185,7 @@ font-style: poppins;
  .img1 {
    height: 560px;
    width: 500px;
-   float: left;
-   margin-right: 10px;
-   
-   margin-top: -70px;
+     margin-left: 0px;
  }
  .hot {
    color: black;
@@ -224,9 +221,12 @@ font-style: poppins;
  .us {
    color:darkgreen;
  }
- .img2 { 
-   margin-right: 10px;
-   float: left;
+ .likemeat { 
+     height: 370px;
+     width: 500px;
+     margin-top: 300px;
+     margin-left: 70px;
+   
 
 
  }
